--- a/app/src/main/res/layout/mainpage.xml
+++ b/app/src/main/res/layout/mainpage.xml
@@ -21,6 +21,7 @@
             android:id="@+id/bottom_navigation_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" />
 
     </RelativeLayout>
 
