--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="My Profile" />
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/ic_logout"
