implemented edit profile, edits to login and signup. currently experiencing bug when changing profile picture multiple times in a row

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/my_toolbar"
@@ -41,7 +41,7 @@
             android:id="@+id/page_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create Post"
+            android:text="Edit Profile"
             android:layout_marginTop="24dp"
             android:layout_marginStart="12dp"
             android:textSize="24sp"
@@ -50,54 +50,65 @@
             app:layout_constraintTop_toBottomOf="@id/my_toolbar" />
 
         <EditText
-            android:id="@+id/enterPostTitle"
+            android:id="@+id/enterName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:hint="Post Title"
+            android:hint="Name"
             android:inputType="text"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/page_title" />
 
-        <TextView
-            android:id="@+id/chooseCategory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Post Category"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="32dp"
-            android:layout_marginStart="12dp"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/enterPostTitle" />
-
-        <Spinner
-            android:id="@+id/categorySelect"
+        <EditText
+            android:id="@+id/enterID"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:entries="@array/categories_array"
+            android:layout_marginTop="24dp"
+            android:hint="USC ID"
+            android:inputType="text"
             android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/enterName" />
+
+        <Spinner
+            android:id="@+id/roleSelect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:entries="@array/roles_array"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chooseCategory" />
+            app:layout_constraintTop_toBottomOf="@id/enterID" />
 
-        <EditText
-            android:id="@+id/enterPostContent"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:hint="Post Content"
-            android:inputType="textCapSentences|textMultiLine"
-            android:padding="10dp"
+        <ImageView
+            android:id="@+id/imageViewProfilePic"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="32dp"
+            android:contentDescription="Profile Picture"
+            android:scaleType="centerCrop"
+            android:src="@drawable/blank_profile_pic"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/categorySelect" />
+            app:layout_constraintTop_toBottomOf="@id/roleSelect" />
 
         <Button
-            android:id="@+id/cancel_post"
+            android:id="@+id/uploadImageButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="112dp"
+            android:text="Upload New Profile Picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageViewProfilePic" />
+
+        <Button
+            android:id="@+id/cancel_profile_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
@@ -106,17 +117,18 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/submit_post"
+            android:id="@+id/save_profile_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="Submit"
+            android:text="Save"
             android:textColor = "@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:backgroundTint="@android:color/holo_green_dark" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
