--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,18 @@
                 tools:layout_editor_absoluteY="12dp" />
         </androidx.appcompat.widget.Toolbar>
 
+        <TextView
+            android:id="@+id/page_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="12dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />
+
         <EditText
             android:id="@+id/enterEmail"
             android:layout_width="0dp"
@@ -44,7 +56,7 @@
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
+            app:layout_constraintTop_toBottomOf="@id/page_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp" />
