--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -88,23 +88,24 @@
             android:id="@+id/imageViewProfilePic"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:contentDescription="Profile Picture"
             android:scaleType="centerCrop"
             android:src="@drawable/blank_profile_pic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/roleSelect"
+            app:layout_constraintEnd_toEndOf="@+id/roleSelect"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toBottomOf="@id/roleSelect" />
 
         <Button
-            android:id="@+id/uploadImageButton"
-            android:layout_width="0dp"
+            android:id="@+id/uploadNewImageButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="112dp"
-            android:text="Upload New Profile Picture"
+            android:layout_marginTop="12dp"
+            android:text="Upload Profile Picture"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toBottomOf="@id/imageViewProfilePic" />
 
         <Button
