added black box testing for notifications, added some white box tests for replies and edit profile

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
+        android:contentDescription="View notifications"
         app:menu="@menu/drawer_menu_notifications">
 
         <androidx.recyclerview.widget.RecyclerView
